tests/pos/i2673.scala
//> using options -Xfatal-warnings -deprecation -feature

package Foos

object Outer {
  class X
  object x
}
