tests/neg/i2673b.scala
//> using options -Xfatal-warnings

package Foos

class Bar // warn
object bar

// nopos-error: No warnings can be incurred under -Werror.
